--- a/src/styles/pages/travel.module.css
+++ b/src/styles/pages/travel.module.css
@@ -6,7 +6,7 @@
 
 .intro {
   text-align: center;
-  margin: 4rem 0;
+  margin: 5rem 0;
 }
 
 .intro h1 {
@@ -21,7 +21,8 @@
 .grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 2rem;
+  gap: 5rem;
+  margin-top: 3rem;
 }
 
 .card {
